--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -12,12 +12,10 @@
         <param-name>primefaces.CLIENT_SIDE_VALIDATION</param-name>
         <param-value>true</param-value>
     </context-param>
-    <!--
         <context-param>
             <param-name>primefaces.THEME</param-name>
-            <param-value>omega</param-value>
+            <param-value>delta</param-value>
         </context-param>
-    -->
 
     <!-- omnifaces -->
     <!-- gzip filter -->
